--- a/src/app/pages/hub/hub.component.html
+++ b/src/app/pages/hub/hub.component.html
@@ -1,1 +1,8 @@
-<p>hub works!</p>
+<div class="row" style="margin: 0;">
+  <div class="col-12 col-xl-2" style="padding: 0;">
+    <app-header></app-header>
+  </div>
+  <div class="col-12 col-xl-10 px-5 py-3" style="height: 100vh !important;">
+    <router-outlet />
+  </div>
+</div>
