--- a/src/app/pages/header/header.component.html
+++ b/src/app/pages/header/header.component.html
@@ -1,1 +1,71 @@
-<p>header works!</p>
+<div class="flex-column flex-shrink-0 px-4 pt-3 pb-2 shadow bg-light d-none d-lg-none d-xl-block vh-100 w-100">
+  <a class="d-flex align-items-center text-white text-decoration-none">
+    <!-- <img src="img/logoMunicipalidadFsa.png" class="me-4 ms-3 rounded shadow" alt="" width="60"> -->
+    <span class="fs-min fw-bold text-dark brandPagina fs-alto-plus">Morgan</span>
+  </a>
+  <!-- <hr> -->
+  <ul class="nav nav-pills flex-column mb-auto mt-3">
+    <li class="nav-item d-flex justify-content-center" style="margin-top: auto !important;">
+      <a class="nav-link w-100 fs-min fw-bold text-dark mt-2 py-3" aria-current="page" routerLink='home'
+        routerLinkActive="active">
+        Inicio
+      </a>
+    </li>
+    <li class="nav-item d-flex justify-content-center">
+      <a class="nav-link w-100 fs-min fw-bold text-dark active py-3" aria-current="page" routerLink='promociones'
+        routerLinkActive="active">
+        Promociones y Packs
+      </a>
+    </li>
+
+    <li class="nav-item d-flex justify-content-center" style="margin-top: auto !important;">
+      <a class="nav-link w-100 fs-min fw-bold text-dark mt-2 py-3" aria-current="page" routerLink='remeras'
+        routerLinkActive="active">
+        Remeras
+      </a>
+    </li>
+    <li class="nav-item d-flex justify-content-center" style="margin-top: auto !important;">
+      <a class="nav-link w-100 fs-min fw-bold text-dark mt-2 py-3" aria-current="page" routerLink='contacto'
+        routerLinkActive="active">
+        Contactanos
+      </a>
+    </li>
+    <li class="nav-item d-flex justify-content-center" style="margin-top: auto !important;">
+      <!-- <button class="nav-link w-100 fs-min fw-bold logout text-danger" aria-current="page" (click)="cerrarSesion()">
+        <i class="fas fa-power-off me-2"></i>
+        Cerrar Sesión
+      </button> -->
+    </li>
+  </ul>
+
+</div>
+
+
+<nav class="navbar navbar-expand-sm navbar-light bg-light shadow d-lg-block d-xl-none">
+  <div class="container">
+    <a class="navbar-brand">Morgan</a>
+    <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavId"
+      aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="collapsibleNavId">
+      <ul class="navbar-nav me-auto mt-2 mt-lg-0">
+        <li class="nav-item me-2">
+          <a class="nav-link px-3 fw-bold active px-2" routerLink='eventos' routerLinkActive="router-link-active"
+            routerLinkActive="active" aria-current="page"><i class="fas fa-calendar"></i> Eventos
+            <span class="visually-hidden">(current)</span></a>
+        </li>
+        <li class="nav-item me-2 d-flex justify-content-center">
+          <!-- <button class="nav-link px-3 fw-bold w-100 fs-min fw-bold logout text-danger px-2 rounded" aria-current="page"
+            (click)="cerrarSesion()">
+            <i class="fas fa-power-off me-2"></i>
+            Cerrar Sesión
+          </button> -->
+        </li>
+        <!-- <li class="nav-item">
+          <a class="nav-link" [routerLink]="['usuarios/', 1]">actividades</a>
+        </li> -->
+      </ul>
+    </div>
+  </div>
+</nav>
