--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,53 @@
+
 /* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
+
+* {
+  font-family: "Montserrat", sans-serif ;
+}
+
+.material-icons{
+  font-family: 'Material Icons';
+}
+
+.fs-min- {
+  font-size: 0.6rem !important;
+  font-family: 'Montserrat', sans-serif;
+}
+
+
+.fs-min {
+  font-size: 0.8rem !important;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.fs-med {
+  font-size: 1.2rem !important;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.fs-alto {
+  font-size: 1.6rem !important;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.fs-alto-plus {
+  font-size: 2rem !important;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.family-montserrat{
+  font-family: 'Montserrat', sans-serif !important;
+}
+
+.bg-azul{
+  background: #07456B !important;
+  color: white !important;
+}
+
+.color-azul{
+  color: #07456B !important;
+}
+
+html, body { height: 100%; }
+body { margin: 0; }
