--- a/src/app/pages/header/header.component.css
+++ b/src/app/pages/header/header.component.css
@@ -1,39 +1,34 @@
+
+/* Boldonse | Bungee Tint | Bytesized | Oswald | Playfair Display | Jaini */
+
 * {
   font-family: 'Montserrat';
 }
 
 .brandPagina{
   font-family: 'Jaini', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif !important;
-}
-/* Boldonse | Bungee Tint | Bytesized | Oswald | Playfair Display | Jaini */
+  letter-spacing: 10px;
+  /* text-shadow: 3px 3px 3px #b3b3b3; */
+  font-size: 50px !important;
 
-/* .active{
-  background: #057cf2 !important;
-  color: #434343 !important;
-}
+  color: #fbfbfb;    /* Color del texto */
+  /* text-shadow:
+    5px 5px 0px #8e0909,
+    -5px -5px 0px black,
+    5px -5px 0px #e10d0d,
+    -5px 5px 0px #999999; */
 
-li{
-  margin-top: 3px;
-  margin-bottom: 3px;
-}
-
-li > a {
-  background: #ebebeb !important;
-}
-
-li > a:hover{
-  background: #9ed5ff;
+    text-shadow:
+    5px 5px 0px #000000,
+    -5px -5px 0px #000000,
+    5px -5px 0px #000000,
+    -5px 5px 0px #cc1414;
 }
 
-.logout{
-  color: #fb3131;
+.nav-link{
+  font-family: 'Boldonse' !important;
+  letter-spacing: 4px;
 }
-
-.logout:hover{
-  background: #fb3131 !important;
-  color: white;
-} */
-
 
 .nav-item{
   background: #e7e7e7;
@@ -41,18 +36,10 @@ li > a:hover{
   border-radius: 5px;
 }
 
-/* Boldonse | Bungee Tint | Bytesized | Oswald | Playfair Display | Jaini */
-
-.nav-link{
-  font-family: 'Boldonse' !important;
-  letter-spacing: 4px;
-  font-size: 15px !important;
-}
-
 .active{
   /* background: rgb(226,226,226); */
 /* background: linear-gradient(94deg, rgba(226,226,226,1) 86%, rgba(38,72,115,1) 100%); */
-  background-color: #0d1b2e !important;
+  background-color: #0d0d0d !important;
   color: white !important;
   border-radius: 5px !important;
 }
